[gd_scene load_steps=4 format=3 uid="uid://xwjrlqdyt8gi"]

[ext_resource type="Script" path="res://enemy_spawner/enemy_spawner.gd" id="1_yrmfv"]
[ext_resource type="Texture2D" uid="uid://cqwsa7lgdiup0" path="res://assets/art/enemy_spawner_sprite.png" id="2_oydjr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hoj5j"]
size = Vector2(28, 40)

[node name="EnemySpawner" type="RigidBody2D"]
collision_layer = 16
collision_mask = 11
mass = 4.0
max_contacts_reported = 4
contact_monitor = true
can_sleep = false
script = ExtResource("1_yrmfv")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(5, 5)
texture = ExtResource("2_oydjr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_hoj5j")

[node name="EnemyContainer" type="Node" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
